argocd/kustomized/media-server/flaresolverr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      nodeSelector:
        kubernetes.io/hostname: home-server
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8191
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: http
            periodSeconds: 30
            timeoutSeconds: 3
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "2"
              memory: 1Gi
          volumeMounts:
            - name: shared-memory
              mountPath: /dev/shm
      volumes:
        - name: shared-memory
          emptyDir:
            medium: Memory
            sizeLimit: 512Mi
