argocd/kustomized/media-server/gerbera-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gerbera
  namespace: media-server
spec:
  replicas: 1
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gerbera
  template:
    metadata:
      labels:
        app: gerbera
    spec:
      hostNetwork: true
      containers:
        - name: gerbera
          image: "gerbera/gerbera:2.5.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 49494
              protocol: TCP
            - containerPort: 1900
              protocol: UDP
          volumeMounts:
            - name: media
              mountPath: "/mnt/content"
            - name: config
              mountPath: "/var/run/gerbera"
      volumes:
        - name: media
          hostPath:
            type: Directory
            path: /mnt/ssd/media
        - name: config
          persistentVolumeClaim:
            claimName: gerbera-config-pvc
#          configMap:
#            name: gerbera-config
