argocd/kustomized/media-server/qbittorrent-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: media-server
spec:
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: home-server
      containers:
        - image: linuxserver/qbittorrent:5.1.2
          imagePullPolicy: IfNotPresent
          name: qbittorrent
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 6881
              protocol: UDP
          volumeMounts:
            - mountPath: /downloads
              name: media
            - mountPath: /data
              name: media
            - mountPath: /config
              name: qbittorrent-config
            - name: webui
              mountPath: /config/data/webui
      restartPolicy: Always
      volumes:
        - name: media
          hostPath:
            type: Directory
            path: /mnt/ssd/media
        - name: qbittorrent-config
          hostPath:
            type: DirectoryOrCreate
            path: /mnt/ssd/qbittorrent-config
        - name: webui
          hostPath:
            path: /home/ubuntu/webui
            type: Directory
