argocd/kustomized/media-server/flaresolverr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr-svc
  namespace: media-server
  labels:
    app: flaresolverr
spec:
  type: ClusterIP
  selector:
    app: flaresolverr
  ports:
    - name: http
      port: 8191
      targetPort: http
      protocol: TCP
