argocd/kustomized/media-server/gerbera-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gerbera-svc
spec:
  type: ClusterIP
  selector:
    app: gerbera
  ports:
    - port: 49494
      targetPort: 49494
      protocol: TCP
      name: HTTP
    - port: 1900
      targetPort: 1900
      protocol: UDP
      name: SSDP
