argocd/kustomized/media-server/jellyfin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: media-server
  labels:
    app: jellyfin
spec:
  type: ClusterIP
  selector:
    app: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: http
      protocol: TCP
