argocd/kustomized/media-server/prowlarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-svc
  namespace: media-server
  labels:
    app: prowlarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: http
      protocol: TCP
