argocd/kustomized/media-server/qbittorrent-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: qbittorrent
  name: qbittorrent-svc
spec:
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: bittorrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
  selector:
    app: qbittorrent
  type: ClusterIP
