argocd/kustomized/media-server/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr-svc
  namespace: media-server
  labels:
    app: radarr
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
    - name: http
      port: 7878
      targetPort: http
      protocol: TCP
