argocd/kustomized/media-server/sonarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr-svc
  namespace: media-server
  labels:
    app: sonarr
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
    - name: http
      port: 8989
      targetPort: http
      protocol: TCP
