argocd/kustomized/media-server/gerbera-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gerbera-auth-redirect
  namespace: media-server
spec:
  forwardAuth:
    address: "https://auth.vasylchuk.org.ua?rd=https://gerbera.vasylchuk.org.ua"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gerbera-ingressroute
  namespace: media-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`gerbera.vasylchuk.org.ua`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: gerbera-auth-redirect
          namespace: media-server
      services:
        - name: gerbera-svc
          namespace: media-server
          port: 49494
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gerbera-auth-ingressroute
  namespace: media-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`gerbera.vasylchuk.org.ua`) && PathPrefix(`/oauth2/`)"
      kind: Rule
      middlewares:
        - name: auth-headers
          namespace: keycloak
      services:
        - name: oauth2-proxy
          namespace: keycloak
          port: 80
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-gerbera
  namespace: media-server
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`gerbera.vasylchuk.org.ua`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: noop-svc
          namespace: kube-system
          port: 80
