argocd/kustomized/media-server/jellyfin-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  namespace: media-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`jellyfin.vasylchuk.org.ua`) && PathPrefix(`/`)"
      kind: Rule
      services:
        - name: jellyfin-svc
          port: 8096
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-jellyfin
  namespace: media-server
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.vasylchuk.org.ua`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: noop-svc
          namespace: kube-system
          port: 80
