argocd/kustomized/media-server/qbittorrent-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingressroute
  namespace: media-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`torrent.vasylchuk.org.ua`) && PathPrefix(`/`)"
      kind: Rule
      services:
        - name: qbittorrent-svc
          port: 8080
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-qbittorrent
  namespace: media-server
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`torrent.vasylchuk.org.ua`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: noop-svc
          namespace: kube-system
          port: 80
