argocd/kustomized/media-server/radarr-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: radarr-auth-redirect
  namespace: media-server
spec:
  forwardAuth:
    address: "https://auth.vasylchuk.org.ua?rd=https://radarr.vasylchuk.org.ua"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: media-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`radarr.vasylchuk.org.ua`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: radarr-auth-redirect
      services:
        - name: radarr-svc
          port: 7878
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-auth-ingressroute
  namespace: media-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`radarr.vasylchuk.org.ua`) && PathPrefix(`/oauth2/`)"
      kind: Rule
      middlewares:
        - name: auth-headers
          namespace: keycloak
      services:
        - name: oauth2-proxy
          namespace: keycloak
          port: 80
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-radarr
  namespace: media-server
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.vasylchuk.org.ua`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: noop-svc
          namespace: kube-system
          port: 80
