argocd/kustomized/media-server/sonarr-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sonarr-auth-redirect
  namespace: media-server
spec:
  forwardAuth:
    address: "https://auth.vasylchuk.org.ua?rd=https://sonarr.vasylchuk.org.ua"
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-Access-Token
      - Authorization

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingressroute
  namespace: media-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`sonarr.vasylchuk.org.ua`) && PathPrefix(`/`)"
      kind: Rule
      middlewares:
        - name: sonarr-auth-redirect
      services:
        - name: sonarr-svc
          port: 8989
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-auth-ingressroute
  namespace: media-server
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`sonarr.vasylchuk.org.ua`) && PathPrefix(`/oauth2/`)"
      kind: Rule
      middlewares:
        - name: auth-headers
          namespace: keycloak
      services:
        - name: oauth2-proxy
          namespace: keycloak
          port: 80
  tls:
    certResolver: letsencrypt

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-http-sonarr
  namespace: media-server
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`sonarr.vasylchuk.org.ua`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: noop-svc
          namespace: kube-system
          port: 80
